# open_ops

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  vercel.json
.github/workflows/: pr-pytest.yml
docs/: 01-architecture.md  02-agents.md  03-skills.md  04-cli-and-tui.md  05-project-analysis.md  06-deployment-flow.md  07-monitoring.md  08-memory.md  09-configuration.md  10-testing.md  11-contributing.md  12-roadmap.md  13-implementation-plan.md
docs/mock-project/: README.md
docs/mock-project/backend/: .env.example  main.py  pyproject.toml
docs/mock-project/frontend/: .env.example  .gitignore  package-lock.json  package.json  vercel.json
examples/: claude_tmux.py  test_record_deployment.py  test_shell_execution.py  tmux_capture_output.py
examples/mock-project/backend/: Dockerfile  railway.toml
examples/mock-project/frontend/: .gitignore  Dockerfile  package-lock.json  package.json
examples/skills/railway/: SKILL.md
examples/skills/render/: SKILL.md
examples/skills/vercel/: SKILL.md
src/openops/: __init__.py  config.py  exceptions.py  live_display_bridge.py  models.py
src/openops/agent/: __init__.py  interactive_tmux.py  llm.py  monitoring.py  monitoring_sinks.py  orchestrator.py  prompts.py  skill_tools.py  subagents.py  tools.py
src/openops/analysis/: __init__.py  analyzer.py  detector.py  env_extractor.py
src/openops/cli/: __init__.py  chat.py  config_cmd.py  credentials.py  deploy.py  init_cmd.py  main.py  monitor_daemon.py  runtime.py
src/openops/credentials/: __init__.py  platforms.py  validators.py
src/openops/skills/: __init__.py  base.py
tests/: __init__.py  test_agent_llm.py  test_agent_monitoring.py  test_agent_orchestrator.py  test_agent_skill_tools.py  test_agent_subagents.py  test_agent_tools.py  test_analysis_analyzer.py  test_analysis_detector.py  test_analysis_env_extractor.py  test_checkpointer.py  test_config.py  test_exceptions.py  test_langfuse_tracing.py  test_models.py  test_monitor_daemon.py  test_monitoring_sinks.py  test_skills_base.py  test_skills_railway.py  test_skills_render.py  test_skills_vercel.py  test_sqlite_store.py  test_storage_base.py
(+37 files in other folders)
