[project]
name = "openops"
version = "0.1.0"
description = "DevOps Chat Agent v1"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.0",
  "langgraph>=1.0",
  "langfuse>=3.3.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "neo4j>=5.20.0",
  "httpx>=0.28.1",
  "langchain-openai>=1.1.12",
  "python-dotenv>=1.2.2",
  "pyyaml>=6.0.3",
  "pydantic-settings>=2.13.1",
  "langchain-anthropic>=1.4.0",
  "deepagents>=0.5.2",
  "langchain-google-genai>=4.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
  "pre-commit>=3.7.0",
  "bandit>=1.7.0",
]

[project.scripts]
openops = "openops.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]
exclude = [
    ".venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["openops"]

[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv"]
